<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_splash"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.lead.infosystems.schooldiary.Splash"
    android:background="@color/colorPrimaryDark">

    <TextView
        android:text="School Diary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_logo_name"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="168dp"
        android:textStyle="normal|bold"
        android:textAllCaps="false"
        android:textAlignment="center"
        android:transitionName="@string/transition_name_login_logo"
        android:textSize="36sp"
        android:fontFamily="casual"
        android:textColor="@android:color/background_light" />

    <TextView
        android:text="Powered By-"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pwd_by"
        android:textColor="@android:color/background_light"
        android:textStyle="normal|bold|italic"
        android:transitionName="@string/transition_name_login_name"
        android:layout_below="@+id/login_logo_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp" />

    <TextView
        android:text="Lead Info Systems"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lis_name"
        android:textSize="18sp"
        android:textStyle="normal|bold|italic"
        android:textAllCaps="true"
        android:lineSpacingExtra="8sp"
        android:transitionName="@string/transition_name_login_pow"
        android:textColor="@color/cardview_light_background"
        android:fontFamily="sans-serif"
        android:layout_marginTop="19dp"
        android:layout_below="@+id/pwd_by"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
