<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:id="@+id/post_card_view"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            card_view:cardCornerRadius="0dp"
            app:layout_constraintTop_toTopOf="parent"
            android:transitionName="@string/transition_name_card"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_margin="5dp"
            app:cardElevation="2dp"
            app:cardBackgroundColor="@android:color/background_light">

                <android.support.constraint.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        >
                        <de.hdodenhof.circleimageview.CircleImageView
                            android:layout_width="70dp"
                            android:layout_height="70dp"
                            android:src="@drawable/defaultpropic"
                            android:adjustViewBounds="false"
                            android:layout_marginTop="5dp"
                            app:layout_constraintTop_toTopOf="parent"
                            android:transitionName="@string/transition_name_propic"
                            android:id="@+id/propic"
                            app:layout_constraintLeft_toLeftOf="parent"
                            android:layout_marginStart="5dp"
                            android:layout_marginLeft="5dp" />

                        <TextView
                            android:text="Umar Mukhtar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/title"
                            android:textStyle="bold"
                            android:layout_marginStart="16dp"
                            app:layout_constraintLeft_toRightOf="@+id/propic"
                            android:transitionName="@string/transition_name_name"
                            android:layout_marginLeft="16dp"
                            android:layout_marginTop="16dp"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:text="4 days ago"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/time_rcv"
                            app:layout_constraintTop_toBottomOf="@+id/title"
                            android:layout_marginStart="16dp"
                            android:transitionName="@string/transition_name_time"
                            app:layout_constraintLeft_toRightOf="@+id/propic"
                            android:layout_marginLeft="16dp"
                            android:layout_marginTop="8dp" />

                        <TextView
                            android:text="A question posted by student"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/text"
                            android:layout_marginTop="10dp"
                            android:transitionName="@string/transition_name_text"
                            app:layout_constraintTop_toBottomOf="@+id/propic"
                            android:layout_marginStart="16dp"
                            app:layout_constraintLeft_toLeftOf="parent"
                            android:layout_marginLeft="16dp" />


                        <ImageView
                            android:layout_width="match_parent"
                            android:id="@+id/postimage"
                            app:layout_constraintTop_toBottomOf="@+id/text"
                            app:layout_constraintLeft_toLeftOf="parent"
                            android:layout_marginTop="10dp"
                            android:transitionName="@string/transition_name_post_image"
                            app:layout_constraintRight_toRightOf="parent"
                            android:scaleType="fitCenter"
                            android:layout_height="200dp" />

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="0dp"
                            android:layout_height="45dp"
                            android:layout_marginEnd="2dp"
                            app:layout_constraintRight_toRightOf="parent"
                            android:layout_marginRight="2dp"
                            android:layout_marginStart="2dp"
                            app:layout_constraintLeft_toLeftOf="parent"
                            android:layout_marginLeft="2dp"
                            android:weightSum="3"
                            android:id="@+id/post_action"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintTop_toBottomOf="@+id/postimage">
                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_weight="1"
                                    android:orientation="horizontal"
                                    android:layout_height="match_parent"
                                    android:id="@+id/like"
                                    android:background="?android:attr/selectableItemBackground"
                                    >
                                        <ImageView
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:src="@drawable/ic_not_liked"
                                            android:layout_margin="8dp"
                                            android:id="@+id/like_icon" />
                                        <LinearLayout
                                            android:layout_width="match_parent"
                                            android:layout_height="match_parent"
                                            android:orientation="vertical">
                                                <TextView
                                                    android:layout_width="wrap_content"
                                                    android:layout_height="wrap_content"
                                                    android:text="Like"
                                                    android:layout_marginTop="8dp"
                                                    android:id="@+id/like_text" />
                                                <TextView
                                                    android:layout_width="wrap_content"
                                                    android:layout_height="wrap_content"
                                                    android:text="0"
                                                    android:textSize="10dp"
                                                    android:layout_marginTop="0dp"
                                                    android:id="@+id/like_num" />
                                        </LinearLayout>
                                </LinearLayout>
                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_weight="1"
                                    android:layout_height="match_parent"
                                    android:id="@+id/comment"
                                    android:clickable="false"
                                    android:background="?android:attr/selectableItemBackground">
                                        <ImageView
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:src="@drawable/ic_comment"
                                            android:paddingTop="2dp"
                                            android:layout_margin="8dp"/>

                                        <LinearLayout
                                            android:layout_width="match_parent"
                                            android:layout_height="match_parent"
                                            android:orientation="vertical">
                                                <TextView
                                                    android:layout_width="wrap_content"
                                                    android:layout_height="wrap_content"
                                                    android:text="Comment"
                                                    android:layout_marginTop="8dp"/>
                                                <TextView
                                                    android:layout_width="wrap_content"
                                                    android:layout_height="wrap_content"
                                                    android:text="0"
                                                    android:textSize="10dp"
                                                    android:layout_marginTop="0dp"
                                                    android:id="@+id/comment_num" />
                                        </LinearLayout>
                                </LinearLayout>
                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_weight="1"
                                    android:id="@+id/share"
                                    android:layout_height="match_parent"
                                    android:background="?android:attr/selectableItemBackground">
                                        <ImageView
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:src="@drawable/ic_share"
                                            android:layout_margin="8dp"/>
                                        <TextView
                                            android:layout_width="match_parent"
                                            android:layout_height="match_parent"
                                            android:text="Share"
                                            android:layout_marginTop="8dp"/>
                                </LinearLayout>

                        </LinearLayout>

                        <ImageButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_delete"
                            android:id="@+id/delete"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintRight_toRightOf="@+id/postimage"
                            android:background="@color/cardview_shadow_end_color"
                            android:layout_marginTop="5dp"
                            android:layout_marginEnd="5dp"
                            android:visibility="gone"
                            android:layout_marginRight="5dp" />

                </android.support.constraint.ConstraintLayout>


        </android.support.v7.widget.CardView>

</RelativeLayout>
